Abstract Linked List and Node for reusability